<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/restaurant_navigation_home">

    <fragment
        android:id="@+id/restaurant_navigation_home"
        android:name="com.example.tastebits.restaurant.ui.home.HomeFragment"
        android:label="@string/restaurant"
        tools:layout="@layout/fragment_restaurant_home" />

    <fragment
        android:id="@+id/restaurant_navigation_menu"
        android:name="com.example.tastebits.restaurant.ui.menu.MenuFragment"
        android:label="@string/restaurant_menu"
        tools:layout="@layout/fragment_restaurant_menu" />

    <fragment
        android:id="@+id/restaurant_navigation_messages"
        android:name="com.example.tastebits.restaurant.ui.messages.MessagesFragment"
        android:label="@string/restaurant_messages"
        tools:layout="@layout/fragment_restaurant_messages" />

</navigation>